--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 
     // SpringDoc for OpenAPI integration
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
+     //db migration flyway
+    //  implementation 'org.flywaydb:flyway-core'
 }
 
 tasks.named('test') {
