--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.validation=DEBUG
-
-
 spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8082
 server.address=0.0.0.0
@@ -17,6 +15,10 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=60MB
 spring.servlet.multipart.max-request-size=100MB
 
+# Flyway sozlamalari
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
 
 server.url=http://localhost:8082/
 image.file=src/main/resources/templates/pictures/
