Add AttachmentRepository, add mapper, role repository

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     // SpringDoc for OpenAPI integration
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
+    // MapStruct for object mapping
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
      //db migration flyway
     //  implementation 'org.flywaydb:flyway-core'
 }
