--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,7 @@ spring.jpa.properties.hibernate.order_updates=true
 # Hibernate logging
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
+springdoc.override-with-generic-response= false
 
 # Connection Pool (HikariCP)
 spring.datasource.hikari.maximum-pool-size=10
