--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.validation=DEBUG
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 server.port=8082
 server.address=0.0.0.0
 spring.servlet.multipart.enabled=true
@@ -23,10 +23,14 @@ spring.flyway.baseline-on-migrate=true
 server.url=http://localhost:8082/
 image.file=src/main/resources/templates/pictures/
 video.file=src/main/resources/templates/videos/
+document.file=src/main/resources/templates/documents/
+audio.file=src/main/resources/templates/audios/
 other.file=src/main/resources/templates/otherFiles/
-image.url=${server.url}api/attachments/home/images/
-video.url=${server.url}api/attachments/home/videos/
-other.url=${server.url}api/attachments/home/otherFiles/
+image.url=${server.url}api/attachment/images/
+video.url=${server.url}api/attachment/videos/
+other.url=${server.url}api/attachment/otherFiles/
+audio.url=${server.url}api/attachment/audios/
+document.url=${server.url}api/attachment/documents/
 super.admin.email=oktamovasilbek12@gmail.com
 #emailsender
 spring.mail.host=smtp.gmail.com
