end points are added for student profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=UniRules
 spring.datasource.url=jdbc:postgresql://localhost:5432/uni_rule
-spring.datasource.username=postgres
-spring.datasource.password=2004
+spring.datasource.username=uni_rules
+spring.datasource.password=uni_rules
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
@@ -13,7 +13,7 @@ server.port=8082
 server.address=0.0.0.0
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=60MB
-spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-request-size=100MB 
 
 # Flyway sozlamalari
 spring.flyway.enabled=true
