fixed video duration , added profile control, added banners , divided into dev, prod, deployed server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     image: postgres:15
     container_name: unirule_postgres
     restart: always
+    mem_reservation: 256m
     ports:
       - "5432:5432"
     environment:
