--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,27 @@
 spring.application.name=UniRules
+spring.profiles.active=dev
+
+
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/uni_rule
-spring.datasource.username=uni_rules
-spring.datasource.password=uni_rules
+spring.datasource.username=postgres
+spring.datasource.password=2004
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.validation=DEBUG
-spring.jpa.hibernate.ddl-auto=create
+
+
 server.port=8082
 server.address=0.0.0.0
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=60MB
-spring.servlet.multipart.max-request-size=100MB 
+
 
 # Flyway sozlamalari
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
-server.url=http://localhost:8082/
+
+
 image.file=src/main/resources/templates/pictures/
 video.file=src/main/resources/templates/videos/
 document.file=src/main/resources/templates/documents/
@@ -50,7 +51,7 @@ spring.jpa.properties.hibernate.order_updates=true
 # Hibernate logging
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
-springdoc.override-with-generic-response= false
+springdoc.override-with-generic-response=false
 
 # Connection Pool (HikariCP)
 spring.datasource.hikari.maximum-pool-size=10
